Fix issue with video image being always visible on YT Music

--- a/source/css/video.css
+++ b/source/css/video.css
@@ -36,3 +36,8 @@ ytmusic-player {
 .html5-video-player video[disableremoteplayback=""] {
   display: block !important;
 }
+
+/* Video image on YT Music */
+#song-image img {
+  display: none !important;
+}
